# mcp-memory-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: autotag.rs  chunking.rs  consolidation.rs  dedup.rs  embedding.rs  hook.rs  main.rs  search.rs  storage.rs
